--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,6 @@ jobs:
         # No configuration file.
         # The archive is from tmarktaylor/pytest-phmdoctest
         python logview.py tests/archives/logs_19.zip
+
+        # Configuration to show lines that identify the repository.
+        python logview.py tests/configs/repository.toml tests/archives/logs_19.zip
