- Split up ci.yml step. - Add key repository. - Rename key excludes to do_not_print. - Rename key summary to summary_patterns. - Pass Path to Config. - Add logic to discover the checked out repository. - Renames. - License badge.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,7 @@ jobs:
         # The archive is from tmarktaylor/pytest-phmdoctest
         python logview.py tests/archives/logs_19.zip
 
+    - name: configs/repository.toml
+      run: |
         # Configuration to show lines that identify the repository.
         python logview.py tests/configs/repository.toml tests/archives/logs_19.zip
