--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,13 +21,42 @@ jobs:
         python -m pip install tomli
         pip freeze
 
+    - name: Install test tools
+      run: |
+        python -m pip install coverage
+        python -m pip install phmdoctest
+        python -m pip install pytest
+        coverage erase
+
+    - name: Help
+      run: |
+        coverage run --branch -m logview -h
+        python logview.py -h > help.txt
+
     - name: logview default configuration
       run: |
         # No configuration file.
         # The archive is from tmarktaylor/pytest-phmdoctest
-        python logview.py tests/archives/logs_19.zip
+        coverage run --branch --append logview.py tests/archives/logs_19.zip
 
     - name: configs/repository.toml
       run: |
         # Configuration to show lines that identify the repository.
-        python logview.py tests/configs/repository.toml tests/archives/logs_19.zip
+        coverage run --branch --append logview.py tests/configs/repository.toml tests/archives/logs_19.zip
+
+    - name: Coverage Report
+      run: |
+        coverage report
+        coverage report > coverage_report.txt
+        coverage html
+
+    - name: Test Readme
+      run: |
+        pytest -vv tests/test_readme.py
+
+    - name: Upload Coverage HTML
+      uses: actions/upload-artifact@v2
+      with:
+        name: htmlcov
+        path: htmlcov
+        retention-days: 15
