Bugfix- issue pytest import UUT failed.
Invoke pytest with -m to add the current directory to sys.path.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
 
     - name: Test Readme
       run: |
-        pytest -vv tests/test_readme.py
+        python -m pytest -vv tests/test_readme.py
 
     - name: Upload Coverage HTML
       uses: actions/upload-artifact@v2
